File Name: CHANGES

07/23/2013 FASP 1.3.5:
- Add safe-guard for GMRES: when memory not enough, reduce restart number.

07/10/2013 FASP 1.3.4:
- Update VS08 and VS10 solutions.
- Add a tutorial example for GMG V-cycle.
- Fix a bug in conditional compiling caused by "omp.h".
- Revise interface for GMG.
- Fix the tutorial and test for GMG.
- Update documentation and FASP website.

06/20/2013 FASP 1.3.3:
- Add geometric multigrid for Poisson in 1,2,3D.
- Fix a bug in cfsplitting_cls.
- Update developers and website.
- Simplify standard interpolation and add more comments.
- Test cfsplitting_clsp.
- Fix a bug in GMG in 1D: convergence rate optimal.
- Improve GMG efficiency, remove unused variables, free up memory.
- Fix a bug in BSR AMG introduced earlier.

06/02/2103 FASP 1.3.2:
- Add VS2010 support.
- Fix a bug introduced in coarsening_rs in 1.3.1.
- Match regression test and update reg.out.

05/17/2013 FASP 1.3.1:
- Separate interpolation_em.c from interpolation.c.
- Make the truncation step as a stand-alone function.
- Clean up direct interpolation: without allocate a temporary P.
- Flattern nested if and for in interpolation routines.
- Further improve structure and efficiency of interpolation.
- Add a few auxiliary functions. 
- Test performance of AMG when there are strong positive couplings. 

05/11/2013 FASP 1.3.0:
- Add a new input parameter AMG_smooth_order.
- Fix matrix-free regression test and add a sample output.
- Clean up AMG setup routines and re-did the code structure.
- Separte C/F splitting phase 1 and phase 2. 
- Add an AMG complexity print-out function for the BSR format.
- Add more comments in coarsening_rs.c
- Flattern nested if and for { } in coarsening routines. 
- Clean up coarsening routines: shorten the code, change several function names, etc.
- Remove interp_type as an input for C/F splitting.
- Remove an old coarsening routine: generate_S_rs.

05/09/2013 FASP 1.2.9:
- When coarsening step not succeed, stop setup instead of quit.